--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -29,6 +29,10 @@ on:
         default: "app/"
         required: false
         type: string
+      platforms:
+        default: "linux/arm64"
+        required: false
+        type: string
     secrets:
       AWS_DEVOPS_ROLE_NAME:
         required: true
@@ -115,7 +119,7 @@ jobs:
           tags: "${{ steps.vars.outputs.ecr_tag_latest }},${{ steps.vars.outputs.ecr_tag }}"
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ inputs.platforms }}
           build-args: |
             "GH_PAT=${{ secrets.GH_PAT }}"
             "BRANCH_NAME=${{ steps.vars.outputs.branch_name }}"
