fix: update Python site-packages path in migration command

--- a/.github/workflows/tests-python.yml
+++ b/.github/workflows/tests-python.yml
@@ -119,7 +119,7 @@ jobs:
 
       - name: Run migrations
         run: |
-          sed -i "s|/usr/local/lib/python3.13/site-packages|$(poetry run python -c 'import site; print(site.getsitepackages()[0])')|g" alembic.ini
+          sed -i "s|/usr/local/lib/python${{ steps.python_version.outputs.version }}/site-packages|$(poetry run python -c 'import site; print(site.getsitepackages()[0])')|g" alembic.ini
           PYTHONPATH=. poetry run alembic upgrade head
 
       - name: Run tests
