--- a/.github/workflows/tests-python.yml
+++ b/.github/workflows/tests-python.yml
@@ -77,7 +77,9 @@ jobs:
 
       - name: Read Python version
         id: python_version
-        run: echo "version=$(cat .python-version | sed 's/^python-//')" >> $GITHUB_OUTPUT
+        run: |
+          echo "version=$(sed 's/^python-//' .python-version)" >> $GITHUB_OUTPUT
+          echo "version_no_minor=$(sed -E 's/^(python-)?([0-9]+\.[0-9]+).*/\2/' .python-version)" >> $GITHUB_OUTPUT
 
       - uses: actions/setup-python@v6
         with:
@@ -119,7 +121,7 @@ jobs:
 
       - name: Run migrations
         run: |
-          sed -i "s|/usr/local/lib/python${{ steps.python_version.outputs.version }}/site-packages|$(poetry run python -c 'import site; print(site.getsitepackages()[0])')|g" alembic.ini
+          sed -i "s|/usr/local/lib/python${{ steps.python_version.outputs.version_no_minor }}/site-packages|$(poetry run python -c 'import site; print(site.getsitepackages()[0])')|g" alembic.ini
           PYTHONPATH=. poetry run alembic upgrade head
 
       - name: Run tests
