--- a/.github/workflows/tests-python-no-db.yml
+++ b/.github/workflows/tests-python-no-db.yml
@@ -27,6 +27,10 @@ on:
         required: false
         type: boolean
         default: true
+      use_postgres:
+        required: false
+        type: boolean
+        default: true
     secrets:
       GH_PUSHER:
         required: true
@@ -45,23 +49,7 @@ jobs:
   Unit:
     if: ${{ inputs.run_pytest == true }}
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:17.6
-        env:
-          POSTGRES_USER: arquitt
-          POSTGRES_PASSWORD: arquitt
-          POSTGRES_DB: easetrack
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd="pg_isready -U arquitt -d easetrack"
-          --health-interval=5s
-          --health-timeout=5s
-          --health-retries=10
     env:
-      DATABASE_URL: postgresql+psycopg2://arquitt:arquitt@localhost:5432/easetrack
-      PGPASSWORD: arquitt
       POETRY_VIRTUALENVS_CREATE: "true"
     steps:
       - uses: actions/checkout@v5
@@ -109,33 +97,13 @@ jobs:
           sudo apt-get install -y libxml2-utils
           git config --global url."https://x-token-auth:${{ secrets.GH_PAT }}@github.com".insteadOf "ssh://git@github.com"
           poetry config installer.max-workers 10
-          if grep -q '\[tool.poetry.group.test.dependencies\]' pyproject.toml; then
-            poetry install --no-root --with main,test
-          else
-            poetry install --no-root --with main,dev
-          fi
-
-      - name: Wait for Postgres
-        run: |
-          until pg_isready -h localhost -p 5432 -U arquitt -d easetrack; do
-            echo "Waiting for Postgres..."
-            sleep 2
-          done
-
-      - name: Reset database
-        run: |
-          psql -h localhost -U arquitt -d postgres -c "DROP DATABASE IF EXISTS easetrack;"
-          psql -h localhost -U arquitt -d postgres -c "CREATE DATABASE easetrack;"
-
-      - name: Run migrations
-        run: |
-          sed -i "s|/usr/local/lib/python${{ steps.python_version.outputs.version_no_minor }}/site-packages|$(poetry run python -c 'import site; print(site.getsitepackages()[0])')|g" alembic.ini
-          PYTHONPATH=. poetry run alembic upgrade head
+          poetry install --no-root --with main,dev
 
       - name: Run tests
         id: tests
         run: |
           if [ -f ".env.sample" ]; then
+            echo ".env.sample encontrado, carregando variáveis..."
             set -a
             sed -e '/^\s*#/d' -e '/^\s*$/d' .env.sample > /tmp/envfile
             source /tmp/envfile
@@ -152,7 +120,7 @@ jobs:
         uses: emibcn/badge-action@v2.0.2
         with:
           label: "Coverage"
-          status: "${{ steps.tests.outputs.coverage_percentage }}%"
+          status: "${{ steps.tests.outputs.coverage_percentage || '0.0' }}%"
           color: "31C754"
           label-color: "414951"
           path: ".github/badges/coverage.svg"
@@ -183,6 +151,7 @@ jobs:
         uses: actions/checkout@v5
         with:
           token: ${{ secrets.GH_PUSHER }}
+
       - run: |
           git config user.name github-actions[bot]
           git config user.email github-actions[bot]@users.noreply.github.com
@@ -229,13 +198,15 @@ jobs:
     if: ${{ inputs.run_changelog == true }}
     name: Changelog Tests
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
+
       - name: Get project version
         id: vars
-        run: |
-          echo "project_version=$(cat .version)" >> $GITHUB_OUTPUT
+        run: echo "project_version=$(cat .version)" >> $GITHUB_OUTPUT
+
       - name: Verifica arquivo de changelog
         id: changelog_reader
         uses: mindsers/changelog-reader-action@v2
