--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -74,7 +74,7 @@ jobs:
           aws eks update-kubeconfig --name ${{ secrets.AWS_HML_CLUSTER_NAME }} --region ${{ secrets.AWS_HML_REGION }}
 
       - name: Checkout do repositório
-        uses: actions/checkout@master
+        uses: actions/checkout@v6
 
       - name: Verifica a tag para upload no ECR
         id: ecr-pretag
@@ -154,7 +154,7 @@ jobs:
           aws eks update-kubeconfig --name ${{ secrets.AWS_HML_CLUSTER_NAME }} --region ${{ secrets.AWS_HML_REGION }}
 
       - name: Checkout do repositório de templates
-        uses: actions/checkout@master
+        uses: actions/checkout@v6
         with:
           repository: ${{ vars.EKS_TEMPLATES_REPO }}
           path: "target"
